# connector-pdf

./: .gitignore  pyproject.toml
src/connector_pdf/: pdf_component.py  pdf_elements.py  test.ipynb  test_script.py
src/connector_pdf/commands/: addLogo.py  addText.py  genPDF.py  generatePDF.py
