[tool.poetry]
name = "pdf_connector"
version = "0.1.0"
description = "This connector will generate a PDF documell generate a PDF document, which will be availabe during the use of Service Tasks in Spiffworkflow"
authors = ["Buhari Abubakar <buharikwmbo@hotmail.com>"]
readme = "README.md"
packages = [{include = "connector_pdf", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

spiffworkflow-connector-command = {git = "https://github.com/sartography/spiffworkflow-connector-command.git", rev = "main"}
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


